{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 41,
  "lineage": "cacdf840-e620-d3d1-bb48-c68fe63ec5dc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02060482f69ba6efa",
            "association_id": "eipassoc-0dd2cce16589b8d49",
            "domain": "vpc",
            "id": "eipalloc-02060482f69ba6efa",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fbea87b622dea426",
            "private_dns": "ip-10-0-1-19.ec2.internal",
            "private_ip": "10.0.1.19",
            "public_dns": "ec2-18-233-205-154.compute-1.amazonaws.com",
            "public_ip": "18.233.205.154",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jump-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:990270794385:instance/i-0b4ef98852d3061f5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b4ef98852d3061f5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ec9af7f79e2a8494",
            "private_dns": "ip-10-0-1-136.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.136",
            "public_ip": "18.208.245.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cb4727c45aa1018c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07effe0be5295708e",
            "tags": {
              "Name": "jumphost"
            },
            "tags_all": {
              "Name": "jumphost"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-079925da678d6b5e5"
            ]
          },
          "dependencies": [
            "aws_security_group.pub-secgroup",
            "aws_subnet.pub-subnet-1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-ec2-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:990270794385:instance/i-07f278ae606e4db35",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07f278ae606e4db35",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ansible",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0550cc11a316da89f",
            "private_dns": "ip-10-0-2-134.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a4c20582006294f1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eba4abe1518e8100",
            "tags": {
              "Name": "sonarqube"
            },
            "tags_all": {
              "Name": "sonarqube"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-079925da678d6b5e5"
            ]
          },
          "dependencies": [
            "aws_security_group.pub-secgroup",
            "aws_subnet.private-sub-1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-ec2-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0557a15b87f6559cf",
            "arn": "arn:aws:ec2:us-east-1:990270794385:instance/i-0af339d6a2ab3d1d2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0af339d6a2ab3d1d2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ansible",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c6f1a8f147952e64",
            "private_dns": "ip-10-0-3-168.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-081eba53b103db213",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aaa5e582246416ad",
            "tags": {
              "Name": "nexus"
            },
            "tags_all": {
              "Name": "nexus"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-079925da678d6b5e5"
            ]
          },
          "dependencies": [
            "aws_security_group.pub-secgroup",
            "aws_subnet.private-sub-2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:990270794385:internet-gateway/igw-0244204738fe83811",
            "id": "igw-0244204738fe83811",
            "owner_id": "990270794385",
            "tags": {
              "Name": "igw-id"
            },
            "tags_all": {
              "Name": "igw-id"
            },
            "vpc_id": "vpc-0b92aa62a1d19d816"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "public-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:990270794385:loadbalancer/app/pub-lb/ebb52c52b511419f",
            "arn_suffix": "app/pub-lb/ebb52c52b511419f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "pub-lb-1197866945.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:990270794385:loadbalancer/app/pub-lb/ebb52c52b511419f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "pub-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-079925da678d6b5e5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03ad361ccb8ddaf0b"
              },
              {
                "subnet_id": "subnet-07effe0be5295708e"
              }
            ],
            "subnets": [
              "subnet-03ad361ccb8ddaf0b",
              "subnet-07effe0be5295708e"
            ],
            "tags": {
              "Name": "public-lb"
            },
            "tags_all": {
              "Name": "public-lb"
            },
            "vpc_id": "vpc-0b92aa62a1d19d816",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.pub-secgroup",
            "aws_subnet.pub-subnet-1",
            "aws_subnet.pub-subnet-2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:990270794385:listener/app/pub-lb/ebb52c52b511419f/68bdec6ca109e2c6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:990270794385:targetgroup/targetGroup1/4e0ccfd976875efb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:990270794385:listener/app/pub-lb/ebb52c52b511419f/68bdec6ca109e2c6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:990270794385:loadbalancer/app/pub-lb/ebb52c52b511419f",
            "port": 8081,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.public-lb",
            "aws_lb_target_group.targetGroup1",
            "aws_security_group.pub-secgroup",
            "aws_subnet.pub-subnet-1",
            "aws_subnet.pub-subnet-2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:990270794385:listener/app/pub-lb/ebb52c52b511419f/dde49c154d3a70fa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:990270794385:targetgroup/targetGroup2/7193c753be1e8dca",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:990270794385:listener/app/pub-lb/ebb52c52b511419f/dde49c154d3a70fa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:990270794385:loadbalancer/app/pub-lb/ebb52c52b511419f",
            "port": 9000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.public-lb",
            "aws_lb_target_group.targetGroup2",
            "aws_security_group.pub-secgroup",
            "aws_subnet.pub-subnet-1",
            "aws_subnet.pub-subnet-2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "targetGroup1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:990270794385:targetgroup/targetGroup1/4e0ccfd976875efb",
            "arn_suffix": "targetgroup/targetGroup1/4e0ccfd976875efb",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:990270794385:targetgroup/targetGroup1/4e0ccfd976875efb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "targetGroup1",
            "port": 8081,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "targetgroup1"
            },
            "tags_all": {
              "Name": "targetgroup1"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b92aa62a1d19d816"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "targetGroup2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:990270794385:targetgroup/targetGroup2/7193c753be1e8dca",
            "arn_suffix": "targetgroup/targetGroup2/7193c753be1e8dca",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:990270794385:targetgroup/targetGroup2/7193c753be1e8dca",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "targetGroup2",
            "port": 9000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "targetgroup2"
            },
            "tags_all": {
              "Name": "targetgroup2"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b92aa62a1d19d816"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-priv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:990270794385:targetgroup/targetGroup1/4e0ccfd976875efb-20230217124629327100000004",
            "port": 8081,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:990270794385:targetgroup/targetGroup1/4e0ccfd976875efb",
            "target_id": "i-07f278ae606e4db35"
          },
          "dependencies": [
            "aws_instance.private-ec2-1",
            "aws_lb_target_group.targetGroup1",
            "aws_security_group.pub-secgroup",
            "aws_subnet.private-sub-1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-priv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:990270794385:targetgroup/targetGroup2/7193c753be1e8dca-20230217124629625600000005",
            "port": 9000,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:990270794385:targetgroup/targetGroup2/7193c753be1e8dca",
            "target_id": "i-0af339d6a2ab3d1d2"
          },
          "dependencies": [
            "aws_instance.private-ec2-2",
            "aws_lb_target_group.targetGroup2",
            "aws_security_group.pub-secgroup",
            "aws_subnet.private-sub-2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mynat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02060482f69ba6efa",
            "connectivity_type": "public",
            "id": "nat-0d608fa075aab0e5f",
            "network_interface_id": "eni-0fbea87b622dea426",
            "private_ip": "10.0.1.19",
            "public_ip": "18.233.205.154",
            "subnet_id": "subnet-07effe0be5295708e"
          },
          "dependencies": [
            "aws_eip.nat_ip",
            "aws_subnet.pub-subnet-1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-050f4d9df28b0df5d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d608fa075aab0e5f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-050f4d9df28b0df5d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.mynat",
            "aws_route_table.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0244204738fe83811",
            "id": "r-rtb-0522ef120a60cbe791080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0522ef120a60cbe79",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myigw",
            "aws_route_table.public",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:990270794385:route-table/rtb-050f4d9df28b0df5d",
            "id": "rtb-050f4d9df28b0df5d",
            "owner_id": "990270794385",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d608fa075aab0e5f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b92aa62a1d19d816"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:990270794385:route-table/rtb-0522ef120a60cbe79",
            "id": "rtb-0522ef120a60cbe79",
            "owner_id": "990270794385",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0244204738fe83811",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b92aa62a1d19d816"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cab914a5ad8079cf",
            "route_table_id": "rtb-050f4d9df28b0df5d",
            "subnet_id": "subnet-0eba4abe1518e8100"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private-sub-1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d42883be992c141",
            "route_table_id": "rtb-050f4d9df28b0df5d",
            "subnet_id": "subnet-0aaa5e582246416ad"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private-sub-2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1a23feb9b4ae31b",
            "route_table_id": "rtb-0522ef120a60cbe79",
            "subnet_id": "subnet-07effe0be5295708e"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.pub-subnet-1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ee024708028d5f4",
            "route_table_id": "rtb-0522ef120a60cbe79",
            "subnet_id": "subnet-03ad361ccb8ddaf0b"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.pub-subnet-2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pub-secgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:990270794385:security-group/sg-079925da678d6b5e5",
            "description": "Allow HTTP traffic from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079925da678d6b5e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 65535,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "pub-sec-group",
            "name_prefix": "",
            "owner_id": "990270794385",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-secgroup"
            },
            "tags_all": {
              "Name": "public-secgroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b92aa62a1d19d816"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:990270794385:subnet/subnet-0eba4abe1518e8100",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eba4abe1518e8100",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "990270794385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv1"
            },
            "tags_all": {
              "Name": "priv1"
            },
            "vpc_id": "vpc-0b92aa62a1d19d816"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:990270794385:subnet/subnet-0aaa5e582246416ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aaa5e582246416ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "990270794385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv2"
            },
            "tags_all": {
              "Name": "priv2"
            },
            "vpc_id": "vpc-0b92aa62a1d19d816"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:990270794385:subnet/subnet-07effe0be5295708e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07effe0be5295708e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "990270794385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bastion host"
            },
            "tags_all": {
              "Name": "bastion host"
            },
            "vpc_id": "vpc-0b92aa62a1d19d816"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:990270794385:subnet/subnet-03ad361ccb8ddaf0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ad361ccb8ddaf0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "990270794385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bastion host"
            },
            "tags_all": {
              "Name": "bastion host"
            },
            "vpc_id": "vpc-0b92aa62a1d19d816"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:990270794385:vpc/vpc-0b92aa62a1d19d816",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cccc600f6f74ade5",
            "default_route_table_id": "rtb-08d94b52ce2d6c8a6",
            "default_security_group_id": "sg-0511bb189e74cf8e8",
            "dhcp_options_id": "dopt-0b26fee25c2c7c049",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b92aa62a1d19d816",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08d94b52ce2d6c8a6",
            "owner_id": "990270794385"
          }
        }
      ]
    }
  ]
}